# GL_Game

./: CMakeLists.txt  README.md
MainLoop/: main_game.cpp
Player/: player.cpp  player.h
